--- a/src/scss/contributor.scss
+++ b/src/scss/contributor.scss
@@ -8,6 +8,10 @@
 		justify-content: center;
 		flex-direction: column;
 		align-items: center;
+		@media (max-width: $md2+px) {
+			display: block;
+			text-align: center;
+		}
 	}
 
 	&__title {
@@ -19,17 +23,27 @@
 	}
 
 	&__form {
+		@media (max-width: $md3+px) {
+			width: 80%;
+		}
 	}
 }
 
 .form-contributor {
 	min-width: 549px;
+	@media (max-width: $md3+px) {
+		min-width: 100%;
+	}
 	&__item {
 		min-height: 64px;
 		border-radius: 15px;
 		background: #283036;
 		display: flex;
 		align-items: center;
+		@media (max-width: $md3+px) {
+			display: flex;
+			justify-content: space-between;
+		}
 	}
 	&__email {
 		flex: 1 1 auto;
