--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -8,12 +8,21 @@
 		grid-template-columns: 260px 1fr;
 		column-gap: 156px;
 		padding: 70px 0px 98px 0px;
+		@media (max-width: $md1 + px) {
+			display: block;
+		}
+		// @media (max-width: $md2 + px) {
+		// 	display: block;
+		// }
 	}
 
 	&__main {
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
+		@media (max-width: $md1 + px) {
+			margin-bottom: 20px;
+		}
 	}
 
 	&__logo {
@@ -48,9 +57,14 @@
 }
 .menu-footer {
 	display: flex;
-
+	@media (max-width: $md3 + px) {
+		display: block;
+	}
 	&__column {
 		flex: 0 1 33.333%;
+		@media (max-width: $md3 + px) {
+			margin-bottom: 15px;
+		}
 	}
 
 	&__title {
