--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -10,6 +10,9 @@
 		}
 		.header__body {
 			min-height: 70px;
+			@media (max-width: $md2+px) {
+				min-height: 90px;
+			}
 		}
 	}
 	&__wrapper {
@@ -30,9 +33,18 @@
 		align-items: center;
 		justify-content: space-between;
 		min-height: 100px;
+		@media (max-width: $md2+px) {
+			min-height: 90px;
+		}
 	}
 
 	&__logo {
+		@media (max-width: $md3+px) {
+			position: relative;
+			z-index: 5;
+			top: -15px;
+			left: 0;
+		}
 	}
 
 	&__menu {
@@ -47,6 +59,9 @@
 	align-items: center;
 	&__img {
 		margin-right: 12px;
+		@media (max-width: $md3+px) {
+			margin-right: 7px;
+		}
 	}
 
 	&__title {
@@ -54,18 +69,53 @@
 		font-size: 22px;
 		line-height: 33px;
 		color: $whiteColor;
+		@media (max-width: $md3+px) {
+			font-size: 18px;
+		}
 	}
 }
 .menu {
 	flex: 0 1 431px;
 	&__body {
+		@media (max-width: $md3+px) {
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			overflow: auto;
+			top: 0;
+			left: -100%;
+			background: #1e252b;
+			transition: left 0.3s ease 0s;
+			padding: 70px 15px 30px 15px;
+			&::before {
+				content: '';
+				position: fixed;
+				width: 100%;
+				height: 50px;
+				top: 0;
+				left: -100%;
+				background: #1e252b;
+				transition: left 0.3s ease 0s;
+				z-index: 2;
+			}
+			&._active {
+				left: 0;
+				&::before {
+					left: 0;
+				}
+			}
+		}
 	}
 
 	&__list {
 		display: flex;
 		align-items: center;
 		flex-wrap: wrap;
+
 		justify-content: space-between;
+		@media (max-width: $md3+px) {
+			display: block;
+		}
 	}
 
 	&__link {
@@ -73,6 +123,7 @@
 		font-size: 16px;
 		line-height: 24px;
 		color: $grayColor;
+		padding: 0 10px;
 		transition: color 0.3s ease 0s;
 		&:hover {
 			color: $whiteColor;
@@ -86,6 +137,12 @@
 		flex-wrap: wrap;
 		padding: 5px 0;
 		position: relative;
+		@media (max-width: $md3+px) {
+			margin-bottom: 15px;
+			&:nth-child(2) {
+				margin-bottom: 240px;
+			}
+		}
 		&:hover {
 			.menu__sub-list {
 				opacity: 1;
@@ -114,6 +171,12 @@
 		transition: all 0.3s ease 0s;
 		pointer-events: none;
 		transform: translate(0px, 10px);
+		@media (max-width: $md3+px) {
+			opacity: 1;
+			visibility: visible;
+			width: 100%;
+			transform: translate(0px, 0px);
+		}
 	}
 
 	&__sub-item {
@@ -134,6 +197,16 @@
 .button {
 	display: flex;
 	align-items: center;
+	@media (max-width: $md3+px) {
+		position: relative;
+		z-index: 5;
+		top: -15px;
+		right: 20px;
+	}
+	@media (max-width: $md4+px) {
+		display: block;
+		text-align: center;
+	}
 	&__login {
 		font-weight: 600;
 		font-size: 16px;
@@ -142,6 +215,9 @@
 		transition: color 0.3s ease 0s;
 		&:hover {
 			color: $whiteColor;
+		}
+		@media (max-width: $md2+px) {
+			font-size: 14px;
 		}
 	}
 
@@ -154,6 +230,16 @@
 		min-height: 48px;
 		margin-left: 41px;
 		transition: all 0.3s ease 0s;
+		@media (max-width: $md2+px) {
+			font-size: 14px;
+			padding: 10px 25px;
+			min-height: 38px;
+			margin-left: 21px;
+		}
+		@media (max-width: $md3+px) {
+			width: 120px;
+			margin-left: 15px;
+		}
 	}
 }
 
@@ -163,4 +249,52 @@
 	margin: 0px 0px 0px 8px;
 	transition: all 0.3s ease 0s;
 	font-size: 12px;
+	@media (max-width: $md3+px) {
+		opacity: 1;
+	}
+}
+
+// Menu burger
+.icon-menu {
+	display: none;
+	@media (max-width: $md3+px) {
+		position: relative;
+		display: block;
+		flex: 0 0 30px;
+		width: 30px;
+		height: 18px;
+		top: -15px;
+		right: -5px;
+		cursor: pointer;
+		z-index: 5;
+		span {
+			transition: all 0.3s ease 0s;
+			top: 46%;
+			left: 0;
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			background: #fff;
+			&:first-child {
+				top: 0px;
+			}
+			&:last-child {
+				top: auto;
+				bottom: 0px;
+			}
+		}
+		&._active {
+			span {
+				transform: scale(0);
+				&:first-child {
+					transform: rotate(-44deg);
+					top: 46%;
+				}
+				&:last-child {
+					transform: rotate(44deg);
+					bottom: 46%;
+				}
+			}
+		}
+	}
 }
