--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -9,5 +9,7 @@ $minWidth: 320;
 $maxWidth: 1440;
 $maxWidthContainer: 1254;
 
-
-
+$md1: $maxWidthContainer + 12;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 479.98;
